hphp/hack/test/sound_dynamic/typing/nonenforceable_static_property_01.bad.php.exp
File "nonenforceable_static_property_01.bad.php", line 11, characters 5-33:
Invalid assignment (Typing[4110])
  File "nonenforceable_static_property_01.bad.php", line 8, characters 19-26:
  Expected `vec<int>`
  File "nonenforceable_static_property_01.bad.php", line 6, characters 46-54:
  But got `dynamic`
